[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domaineer"
version = "1.3.7.0"
authors = [
  { name="Arya Kresna", email="aryakrishna436@gmail.com" },
]
description = "A Semi-Auto Exploitation App"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=2.7"
classifiers = [
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/c0del1ar/Domaineer"
"Bug Tracker" = "https://github.com/c0del1ar/Domaineer/issues"
